# sparket-ai

./: pyproject.toml
docs/: deploy_auditor_branch.md  miner.md
sparket/config/: core.py
sparket/entrypoints/: miner.py  validator.py
sparket/miner/: client.py  sync.py
sparket/miner/base/: config.py  runner.py
sparket/protocol/: protocol.py
sparket/providers/sportsdataio/: types.py
sparket/shared/: log_colors.py
sparket/validator/: broadcaster.py  comms.py  validator.py
sparket/validator/config/: config.py
sparket/validator/database/: dbm.py
sparket/validator/database/alembic/versions/: 6eea4bc67ecd_add_security_blacklist.py  b7c8d9e0f1a2_add_skill_dim.py
sparket/validator/database/schema/: __init__.py  miner.py  security.py
sparket/validator/handlers/core/chain/: miner_management.py  (+1 more)
sparket/validator/handlers/data/: game_data.py
sparket/validator/handlers/score/: main_score.py  odds_score.py
sparket/validator/listeners/: synapse_listener.py
sparket/validator/scoring/batch/: work_queue.py
sparket/validator/scoring/ground_truth/: snapshot_pipeline.py
sparket/validator/scoring/jobs/: skill_score.py
sparket/validator/scoring/worker/: db_ops.py  runner.py
sparket/validator/security/: __init__.py  config.py  iptables.py  manager.py  middleware.py
sparket/validator/services/: sportsdata_ingestor.py
sparket/validator/utils/: logging_config.py
tests/validator/: test_comms.py  test_synapse_handlers.py
tests/validator/scoring/: test_pipeline_fixes.py
tests/validator/security/: test_middleware.py  test_security_manager.py
