[project]
name = "sparket-subnet"
version = "0.0.1"
description = "sparket-subnet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "sparket", email = "info@betsparket.com" }
]
dependencies = [
    "starlette>=0.30.0",
    "pydantic>=2",
    "rich>=13",
    "pytest>=8",
    "pytest-asyncio>=0.24.0",
    "torch>=2",
    "numpy>=1",
    "bittensor>=10.0.0",
    "substrate-interface>=1.7.11",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.43",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.11.0",
    "aiosqlite>=0.19.0",
    "bittensor-cli>=9.13.1",
    "psycopg>=3.2.12",
    "httpx>=0.27.0",
    "psutil>=7.2.1",
    "scipy>=1.15.3",
]

[project.scripts]
sparket-alembic = "sparket.validator.database.scripts.alembic_cli:main"

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as end-to-end tests requiring running nodes",
    "integration: marks tests as integration tests requiring external services",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]

